[package]
name = "pico_complementary_spwm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sndnvaps/pico-complementary-spwm"
authors = ["Samuel Freeman <admin@sndnvaps.com>"]
license = "MIT/Apache-2.0"
categories = ["no-std", "embedded"]

[dependencies]
rp-pico = "0.9.0"
rp2040-hal = "0.10.1"
embedded-hal = "1.0.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"
defmt = "1.0.1"

